--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.4.1",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
   },
